--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -3,6 +3,8 @@
 
   &__container {
     display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
 
     @include DesktopMax {
       flex-direction: column;
